# kilo

./: README.md  index.html  package-lock.json  package.json  vite-plugin-engine.js  vite.config.js
server/: ocr-helper.mjs  playwright-engine.mjs  proxy.mjs
src/: App.vue  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  main.rs
src/router/: index.js
src/stores/: taskStore.js
src/utils/: autoFiller.js  configManager.js  formScraper.js  playwrightClient.js
src/views/: AutoExecute.vue  ConfigBuilder.vue  Logs.vue  TaskList.vue
