[package]
name = "kilo-form"
version = "1.0.0"
description = "KiloForm - 桌面表单自动化框架"
authors = ["KiloClaw"]
license = "MIT"
repository = "https://github.com/asp2008/kilo"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.7", features = [
  "shell-open",
  "fs-all",
  "path-all",
  "http-all",
  "dialog-all",
  "window-all",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1.0", features = ["full"] }
scraper = "0.19"
base64 = "0.21"
thiserror = "1.0"
url = "2.5"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
